--- a/css/styles.css
+++ b/css/styles.css
@@ -12,11 +12,36 @@ h1 {
   text-align: center;
   color: rgb(58, 16, 16);
 }
+h2 {
+  text-align: center;
+  font-size: 30px;
+  color: #3a3a3a;
+}
+.h2-awards {
+  text-align: center;
+  font-size: 40px;
+  color: #0f1224eb;
+}
 h3 {
   font-size: 20px;
   color: #3a3a3a;
   text-align: center;
   justify-content: space-evenly;
+}
+.h3-awards {
+  font-size: 24px;
+  color: rgb(58, 16, 16);
+  text-align: center;
+}
+p {
+  text-align: center;
+  font-size: 21px;
+  color: #3a3a3a;
+}
+.p-awards {
+  text-align: center;
+  font-size: 21px;
+  color: #000000;
 }
 a {
   font-size: 28px;
@@ -37,6 +62,13 @@ a {
   justify-content: center;
   align-items: center;
 }
+.center-img {
+  margin: 0 auto;
+  display: block;
+  width: 75%;
+  height: auto;
+}
+
 img {
   width: 400px;
   height: auto;
