--- a/css/styles.css
+++ b/css/styles.css
@@ -43,6 +43,29 @@ p {
   font-size: 21px;
   color: #000000;
 }
+
+.spotify-link img {
+  transition: transform 0.5s ease-in-out;
+  border-radius: 50%;
+}
+
+.spotify-link:hover img {
+  transform: scale(1.1);
+  opacity: 0.9;
+  box-shadow: 2px 2px 5px rgba(45, 40, 9, 0.648);
+}
+.listeners {
+  color: rgb(145, 101, 7);
+  line-height: 1px;
+  font-size: 19.5px;
+}
+.contact {
+  color: rgb(145, 101, 7);
+  font-size: 25px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
+}
 a {
   font-size: 28px;
   text-align: center;
